[package]
edition = "2021"
name = "dodgy_2d"
version = "0.5.2"
description = "An implementation of ORCA, a local collision avoidance algorithm for 2D."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/dodgy"

categories = ["game-development"]
keywords = ["orca", "rvo", "collision", "avoidance", "navigation"]

[dependencies]
glam = "0.28.0"
fastrand = "2.1"
